schema/testdata/errors/unresolvable_lhs_with_incorrect_operator.keel
model Post {
    fields {
        title Text
        published Boolean
    }

    actions {
        get posts(id) {
            //expect-error:32:33:E022:Operator '=' not permitted on @where
            @where(post.titles = 123)
        }
    }
}
